--- a/Node JS/23-02-2323/script1/views/partials/footer.ejs
+++ b/Node JS/23-02-2323/script1/views/partials/footer.ejs
@@ -1,14 +1,16 @@
 <style>
-    footer{
-        background-color: darkblue;
+    nav{
+        background-color: rgb(204, 204, 204);
         width: 100%;
-        color: white;
-        height: 80px;
+        height: 70px;
     }
 </style>
+
+
 <footer>
+    <h3><%=titulo%></h3>
     <div>
-        <p>Endereços</p>
-        <a href="#">Siga-nos em nossas redes sociais</a>
+        <a href="/">Home</a>
+        <a href="/sobre">Sobre</a>
     </div>
 </footer>
