--- a/Node JS/23-02-2323/script1/views/partials/navbar.ejs
+++ b/Node JS/23-02-2323/script1/views/partials/navbar.ejs
@@ -1,17 +1,16 @@
 <style>
-    nav {
-        background-color: darkgreen;
+    nav{
+        background-color: rgb(204, 204, 204);
         width: 100%;
-        color: white;
-        height: 80px;
+        height: 70px;
     }
-    
 </style>
+
 
 <nav>
     <h3><%=titulo%></h3>
     <div>
         <a href="/">Home</a>
-        <a href="/about">Sobre</a>
+        <a href="/sobre">Sobre</a>
     </div>
 </nav>
