--- a/Node JS/23-02-2323/script1/views/index.ejs
+++ b/Node JS/23-02-2323/script1/views/index.ejs
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page teste</title>
+    <title>Index</title>
+
+    
 
 </head>
 <body>
 
-    <%- include('./partials/navbar.ejs', {titulo: "Página Principal"}) %>
+    <%- include('./partials/navbar', {titulo: 'Página principal'}) %>
+
+
     <section>
-        <% alunos.forEach((aluno)=>{ %> 
-            <%  if(aluno.nome[0] === 'J'){ %>
-               <h2><%=aluno.nome%></h2> 
-                <h3><%=aluno.turma%></h3>
-                <%   } %>
-        <% }) %>
+
+        <% for (let aluno of alunos){ %>
+            <h2><%=aluno.Nome%></h2>
+            <h3><%=aluno.Turma%></h3>
+        <% } %>
+
     </section>
-    <%- include ('./partials/footer.ejs') %>
+
+    <%- include('./partials/navbar', {titulo: 'Home'}) %>
+
 
 </body>
+</html>
