--- a/Node JS/27-02-2023/revisao/public/templates/nav.ejs
+++ b/Node JS/27-02-2023/revisao/public/templates/nav.ejs
@@ -11,7 +11,7 @@
 <nav>
     <h1><%=titulo%></h1>
     <div>
-        <a href="/">Home</a>
-        <a href="/todos">Alunos</a>
+        <a href="/alunos">Home</a>
+        <a href="/alunos/todos">Alunos</a>
     </div>
 </nav>
