--- a/Node JS/27-02-2023/script1/public/register.ejs
+++ b/Node JS/27-02-2023/script1/public/register.ejs
@@ -10,9 +10,9 @@
     <h2>Register</h2>
 
     <form action="/user/register" method="POST">
-        <input type="text" name="nome" id="nome" placeholder="Nome">
-        <input type="email" name="email" id="email" placeholder="Email">
-        <input type="password" name="password" id="password" placeholder="Senha">
+        <input type="text" name="nome" id="nome" placeholder="Nome" required> 
+        <input type="email" name="email" id="email" placeholder="Email" required>
+        <input type="password" name="password" id="password" placeholder="Senha" required>
         <button>Registrar</button>
     </form>
 </body>
