--- a/Node JS/27-02-2023/script1/public/index.ejs
+++ b/Node JS/27-02-2023/script1/public/index.ejs
@@ -9,10 +9,14 @@
 </head>
 <body>
     <%- include("./style")%>
+
+    <h2><%=titulo%></h2>
+
     <section>
         <h2>Página inicial</h2>
-        <a href="user/register">Sign-in</a>
-        <a href="user/login">Log-in</a>
+        <a href="/register">Sign-in</a>
+        <a href="/login">Log-in</a>
+        <a href="/admin">Área Admnistritiva</a>
     </section>
 </body>
 </html>
