--- a/Node JS/27-02-2023/script1/public/register.ejs
+++ b/Node JS/27-02-2023/script1/public/register.ejs
@@ -15,6 +15,6 @@
         <input type="password" name="password" id="password" placeholder="Senha" required>
         <button>Registrar</button>
     </form>
-    <a href="/user/login">Já possui uma conta??</a>
+    <a href="/user/login">Já possui uma conta?</a>
 </body>
 </html>
