--- a/Node JS/27-02-2023/script1/public/index.ejs
+++ b/Node JS/27-02-2023/script1/public/index.ejs
@@ -14,8 +14,8 @@
 
     <section>
         <h2>Página inicial</h2>
-        <a href="/register">Sign-in</a>
-        <a href="/login">Log-in</a>
+        <a href="user/register">Sign-in</a>
+        <a href="user/login">Log-in</a>
         <a href="/admin">Área Admnistritiva</a>
     </section>
 </body>
