--- a/Node JS/Março/06-03/script1/public/style.css
+++ b/Node JS/Março/06-03/script1/public/style.css
@@ -32,7 +32,8 @@ section{
     max-width: 1000px;
 }
 #news_form{
-    border: 1px solid black;
+    margin-top: 30px;
+    border: 1.5px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,30 +42,34 @@ section{
     text-align: center;
 }
 #news_form h2{
+    padding: 8px 0px;
     width: 100%;
     background-color: darkblue;
     color: white;
 }
 #news_form input, #news_form textarea{
+    width: 60%;
     font-size: 1.4rem;
-    padding: 12px ;
+    padding: 16px ;
     text-align: center;
     border-radius: 20px;
-    border: 1px solid black;
+    border: 1.5px solid black;
 }
 
 #news_form button{
-  
+    width: 40%;
     background-color: darkblue;
     color: white;
     border: 1.5px solid white;
     padding: 12px;
+    margin-bottom: 8px;
+    transition: all .4s;
 }
-
-form{
-
-    padding: 20px;
-   
+#news_form button:hover{
+    cursor: pointer;
+    background-color: white;
+    color: darkblue;
+    border: 1.5px solid darkblue;
 }
 
 #news_container{
@@ -73,15 +78,35 @@ form{
     flex-direction: column;
     gap: 12px;
     width: 60%;
-
     padding: 20px;
-    border: 1px solid black;
+    border: 1.5px solid black;
 }
 .card{
     text-align: center;
-    border: 1px solid black;
+    border: 1.5px solid black;
 }
 .header_card{
     color: white;
     background-color: darkblue;
+}
+
+@media screen and (max-width: 700px){
+    #news_form, #news_container{
+        width: 80%;
+    }
+    #news_form input, #news_form textarea{
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 480px){
+    #news_form, #news_container{
+        width: 95%;
+    }
+    #news_form h2{
+        font-size: 1.2rem;
+    }
+    #news_form input, #news_form textarea{
+        width: 80%;
+    }
 }
