--- a/Node JS/Desafios/Desafio teste/reports/relatorio.jrxml
+++ b/Node JS/Desafios/Desafio teste/reports/relatorio.jrxml
@@ -11,17 +11,107 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_CH" mode="Opaque" backcolor="#BFE1FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Style1" backcolor="#E3E3E3"/>
+	<subDataset name="Dataset1" uuid="34fdd0c3-b22e-4b97-adbc-6b4377e0efcd">
+		<queryString>
+			<![CDATA[]]>
+		</queryString>
+		<field name="nome" class="java.lang.String"/>
+		<field name="idade" class="java.lang.String"/>
+		<field name="turma" class="java.lang.String"/>
+		<field name="endereco" class="java.lang.String"/>
+		<field name="telefone" class="java.lang.String"/>
+	</subDataset>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
 	<field name="nome" class="java.lang.String"/>
 	<field name="idade" class="java.lang.String"/>
 	<field name="turma" class="java.lang.String"/>
+	<field name="endereco" class="java.lang.String"/>
+	<field name="telefone" class="java.lang.String"/>
+	<field name="Alunos.nome" class="java.lang.String"/>
+	<group name="Group1">
+		<groupHeader>
+			<band height="250">
+				<componentElement>
+					<reportElement positionType="Float" x="0" y="110" width="515" height="30" uuid="c4ac3f74-39c0-47ec-89c4-f168906c43d2">
+						<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					</reportElement>
+					<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
+						<datasetRun subDataset="Dataset1" uuid="bd4f2d7c-3902-4efb-8932-dfc411668b1e">
+							<dataSourceExpression><![CDATA[((net.sf.jasperreports.engine.data.JsonDataSource)$P{REPORT_DATA_SOURCE}).subDataSource("Alunos")]]></dataSourceExpression>
+						</datasetRun>
+						<jr:listContents height="30" width="515">
+							<frame>
+								<reportElement x="0" y="0" width="515" height="30" uuid="63586f70-15af-4d55-886b-bb45d0ad6661">
+									<property name="com.jaspersoft.studio.unit.width" value="px"/>
+									<property name="com.jaspersoft.studio.unit.height" value="px"/>
+								</reportElement>
+								<box>
+									<pen lineWidth="1.0"/>
+								</box>
+								<textField>
+									<reportElement x="0" y="0" width="140" height="30" uuid="a6b4cb4a-15e0-408e-9e57-31a0c6adb653"/>
+									<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+								</textField>
+								<textField>
+									<reportElement x="190" y="0" width="140" height="30" uuid="6768e5d1-054a-467b-a9ce-775a07e7256e"/>
+									<textFieldExpression><![CDATA[$F{idade}]]></textFieldExpression>
+								</textField>
+								<textField>
+									<reportElement x="375" y="0" width="140" height="30" uuid="4e0e775e-2092-4522-be46-26ef8846591e"/>
+									<textFieldExpression><![CDATA[$F{turma}]]></textFieldExpression>
+								</textField>
+							</frame>
+						</jr:listContents>
+					</jr:list>
+				</componentElement>
+				<staticText>
+					<reportElement positionType="Float" x="0" y="140" width="514" height="110" uuid="45f4c759-781c-4f7f-b4a4-790fbbaf6644"/>
+					<textElement textAlignment="Left"/>
+					<text><![CDATA[Lectus magna fringilla urna porttitor. Risus quis varius quam quisque. Lacus sed turpis tincidunt id aliquet risus feugiat in. Ultrices in iaculis nunc sed augue lacus viverra. Sit amet nisl suscipit adipiscing bibendum est. Dolor sit amet consectetur adipiscing elit. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Lectus nulla at volutpat diam ut venenatis tellus. Blandit massa enim nec dui nunc mattis enim. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Arcu non odio euismod lacinia at quis risus sed. Habitasse platea dictumst vestibulum rhoncus. Feugiat scelerisque varius morbi enim nunc faucibus. Quisque egestas diam in arcu cursus euismod quis. Turpis tincidunt id aliquet risus feugiat in ante metus dictum. Egestas pretium aenean pharetra magna ac placerat. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Auctor neque vitae tempus quam]]></text>
+				</staticText>
+				<staticText>
+					<reportElement positionType="Float" x="0" y="0" width="514" height="110" uuid="ff9b4d84-6925-41ba-80a5-f59a9908a26a"/>
+					<textElement textAlignment="Left"/>
+					<text><![CDATA[Lectus magna fringilla urna porttitor. Risus quis varius quam quisque. Lacus sed turpis tincidunt id aliquet risus feugiat in. Ultrices in iaculis nunc sed augue lacus viverra. Sit amet nisl suscipit adipiscing bibendum est. Dolor sit amet consectetur adipiscing elit. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Lectus nulla at volutpat diam ut venenatis tellus. Blandit massa enim nec dui nunc mattis enim. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Arcu non odio euismod lacinia at quis risus sed. Habitasse platea dictumst vestibulum rhoncus. Feugiat scelerisque varius morbi enim nunc faucibus. Quisque egestas diam in arcu cursus euismod quis. Turpis tincidunt id aliquet risus feugiat in ante metus dictum. Egestas pretium aenean pharetra magna ac placerat. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Auctor neque vitae tempus quam]]></text>
+				</staticText>
+			</band>
+		</groupHeader>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="20" splitType="Stretch">
+		<band height="50" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="515" height="20" uuid="9c32a730-4925-4047-a035-a1aab785ff91">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -32,12 +122,20 @@
 				</textElement>
 				<text><![CDATA[Relatório de alunos]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="0" y="20" width="190" height="30" uuid="073aea8c-7fe6-4b44-9d66-70eb1ca8ca07"/>
+				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="325" y="20" width="190" height="30" uuid="8c1b0a36-4fee-4b52-8997-d2196245b82c"/>
+				<textFieldExpression><![CDATA[$F{telefone}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="24" splitType="Stretch">
 			<frame>
-				<reportElement x="0" y="0" width="515" height="24" uuid="efcd927b-075e-4dfe-a7bd-3ed9fbe16acd">
+				<reportElement mode="Opaque" x="0" y="0" width="515" height="24" backcolor="#E0E0E0" uuid="efcd927b-075e-4dfe-a7bd-3ed9fbe16acd">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -59,20 +157,20 @@
 			</frame>
 		</band>
 	</columnHeader>
-	<detail>
-		<band height="125" splitType="Stretch">
+	<pageFooter>
+		<band height="44">
+			<staticText>
+				<reportElement x="0" y="0" width="515" height="20" uuid="c4d8ce7d-e878-40cf-9c03-8111ffc727f1">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[Fim do relatório]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="0" y="0" width="100" height="30" uuid="ae25ba17-bd10-4677-b74c-04a69ac1d311"/>
-				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="207" y="0" width="100" height="30" uuid="2d96811f-4d4c-4b6f-b332-e32cfa7d8fb2"/>
-				<textFieldExpression><![CDATA["Text Field"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="415" y="0" width="100" height="30" uuid="c7b12612-a16c-4caf-a184-e964dd0ce5de"/>
-				<textFieldExpression><![CDATA["Text Field"]]></textFieldExpression>
+				<reportElement x="430" y="20" width="84" height="24" uuid="875a5b28-169d-44f7-88bb-062e01f81deb"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
-	</detail>
+	</pageFooter>
 </jasperReport>
