--- a/Node JS/Desafios/Desafio teste/reports/relatorio.jrxml
+++ b/Node JS/Desafios/Desafio teste/reports/relatorio.jrxml
@@ -39,138 +39,258 @@
 		</box>
 	</style>
 	<style name="Style1" backcolor="#E3E3E3"/>
+	<style name="Table 1_TD" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table 1_CH" mode="Opaque" backcolor="#BFE1FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table 1_TH" mode="Opaque" backcolor="#F0F8FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
 	<subDataset name="Dataset1" uuid="34fdd0c3-b22e-4b97-adbc-6b4377e0efcd">
 		<queryString>
 			<![CDATA[]]>
 		</queryString>
 		<field name="nome" class="java.lang.String"/>
-		<field name="idade" class="java.lang.String"/>
+		<field name="idade" class="java.lang.Integer"/>
 		<field name="turma" class="java.lang.String"/>
-		<field name="endereco" class="java.lang.String"/>
-		<field name="telefone" class="java.lang.String"/>
+		<field name="notas" class="java.lang.String"/>
+		<field name="aprovado" class="java.lang.Boolean"/>
+		<field name="quantidade" class="java.lang.Integer"/>
+		<variable name="Variable_1" class="java.lang.String" resetType="Group" resetGroup="Group1" calculation="Count"/>
+		<group name="Group1">
+			<groupExpression><![CDATA[$F{turma}]]></groupExpression>
+		</group>
 	</subDataset>
+	<parameter name="TESTE" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
 	<field name="nome" class="java.lang.String"/>
-	<field name="idade" class="java.lang.String"/>
+	<field name="quantidade" class="java.lang.Integer"/>
 	<field name="turma" class="java.lang.String"/>
 	<field name="endereco" class="java.lang.String"/>
 	<field name="telefone" class="java.lang.String"/>
-	<field name="Alunos.nome" class="java.lang.String"/>
-	<group name="Group1">
-		<groupHeader>
-			<band height="250">
-				<componentElement>
-					<reportElement positionType="Float" x="0" y="110" width="515" height="30" uuid="c4ac3f74-39c0-47ec-89c4-f168906c43d2">
-						<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					</reportElement>
-					<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
-						<datasetRun subDataset="Dataset1" uuid="bd4f2d7c-3902-4efb-8932-dfc411668b1e">
-							<dataSourceExpression><![CDATA[((net.sf.jasperreports.engine.data.JsonDataSource)$P{REPORT_DATA_SOURCE}).subDataSource("Alunos")]]></dataSourceExpression>
-						</datasetRun>
-						<jr:listContents height="30" width="515">
-							<frame>
-								<reportElement x="0" y="0" width="515" height="30" uuid="63586f70-15af-4d55-886b-bb45d0ad6661">
-									<property name="com.jaspersoft.studio.unit.width" value="px"/>
-									<property name="com.jaspersoft.studio.unit.height" value="px"/>
-								</reportElement>
-								<box>
-									<pen lineWidth="1.0"/>
-								</box>
-								<textField>
-									<reportElement x="0" y="0" width="140" height="30" uuid="a6b4cb4a-15e0-408e-9e57-31a0c6adb653"/>
-									<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
-								</textField>
-								<textField>
-									<reportElement x="190" y="0" width="140" height="30" uuid="6768e5d1-054a-467b-a9ce-775a07e7256e"/>
-									<textFieldExpression><![CDATA[$F{idade}]]></textFieldExpression>
-								</textField>
-								<textField>
-									<reportElement x="375" y="0" width="140" height="30" uuid="4e0e775e-2092-4522-be46-26ef8846591e"/>
-									<textFieldExpression><![CDATA[$F{turma}]]></textFieldExpression>
-								</textField>
-							</frame>
-						</jr:listContents>
-					</jr:list>
-				</componentElement>
-				<staticText>
-					<reportElement positionType="Float" x="0" y="140" width="514" height="110" uuid="45f4c759-781c-4f7f-b4a4-790fbbaf6644"/>
-					<textElement textAlignment="Left"/>
-					<text><![CDATA[Lectus magna fringilla urna porttitor. Risus quis varius quam quisque. Lacus sed turpis tincidunt id aliquet risus feugiat in. Ultrices in iaculis nunc sed augue lacus viverra. Sit amet nisl suscipit adipiscing bibendum est. Dolor sit amet consectetur adipiscing elit. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Lectus nulla at volutpat diam ut venenatis tellus. Blandit massa enim nec dui nunc mattis enim. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Arcu non odio euismod lacinia at quis risus sed. Habitasse platea dictumst vestibulum rhoncus. Feugiat scelerisque varius morbi enim nunc faucibus. Quisque egestas diam in arcu cursus euismod quis. Turpis tincidunt id aliquet risus feugiat in ante metus dictum. Egestas pretium aenean pharetra magna ac placerat. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Auctor neque vitae tempus quam]]></text>
-				</staticText>
-				<staticText>
-					<reportElement positionType="Float" x="0" y="0" width="514" height="110" uuid="ff9b4d84-6925-41ba-80a5-f59a9908a26a"/>
-					<textElement textAlignment="Left"/>
-					<text><![CDATA[Lectus magna fringilla urna porttitor. Risus quis varius quam quisque. Lacus sed turpis tincidunt id aliquet risus feugiat in. Ultrices in iaculis nunc sed augue lacus viverra. Sit amet nisl suscipit adipiscing bibendum est. Dolor sit amet consectetur adipiscing elit. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Lectus nulla at volutpat diam ut venenatis tellus. Blandit massa enim nec dui nunc mattis enim. In metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Arcu non odio euismod lacinia at quis risus sed. Habitasse platea dictumst vestibulum rhoncus. Feugiat scelerisque varius morbi enim nunc faucibus. Quisque egestas diam in arcu cursus euismod quis. Turpis tincidunt id aliquet risus feugiat in ante metus dictum. Egestas pretium aenean pharetra magna ac placerat. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Auctor neque vitae tempus quam]]></text>
-				</staticText>
-			</band>
-		</groupHeader>
-	</group>
+	<field name="Alunos" class="java.lang.String"/>
+	<field name="alunos.nome" class="java.lang.String"/>
+	<field name="alunos.turma" class="java.lang.String"/>
+	<field name="alunos.idade" class="java.lang.String"/>
+	<field name="Alunos[0].turma" class="java.lang.String"/>
+	<field name="notas" class="java.lang.String"/>
+	<field name="Field_1" class="java.lang.String"/>
+	<group name="Group1"/>
 	<background>
-		<band splitType="Stretch"/>
+		<band splitType="Stretch">
+			<componentElement>
+				<reportElement x="0" y="-104" width="514" height="104" uuid="779a9a4f-8a37-4499-b936-7dd7a5df40ab">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+					<property name="com.jaspersoft.studio.table.style.table_header" value="Table 1_TH"/>
+					<property name="com.jaspersoft.studio.table.style.column_header" value="Table 1_CH"/>
+					<property name="com.jaspersoft.studio.table.style.detail" value="Table 1_TD"/>
+				</reportElement>
+				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
+					<datasetRun subDataset="Dataset1" uuid="06939ca1-7e8f-47e0-afba-fe95869028cf">
+						<dataSourceExpression><![CDATA[((net.sf.jasperreports.engine.data.JsonDataSource)$P{REPORT_DATA_SOURCE}).subDataSource("Alunos")]]></dataSourceExpression>
+					</datasetRun>
+					<jr:column width="140" uuid="5917ce89-974a-4649-abb1-a007610ecd07">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
+						<jr:groupFooter groupName="Group1">
+							<jr:cell style="Table 1_CH" height="30" rowSpan="1">
+								<staticText>
+									<reportElement x="0" y="0" width="140" height="30" uuid="fed8aaab-4c95-446c-ac0e-c21cafc3cd1c"/>
+									<text><![CDATA[Total:]]></text>
+								</staticText>
+							</jr:cell>
+						</jr:groupFooter>
+						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="140" height="30" uuid="014b6278-f78d-4874-afd8-251d86484f62"/>
+								<text><![CDATA[nome]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table 1_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="140" height="30" uuid="8243baca-a550-4491-b0c9-b065a22473c7"/>
+								<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="60" uuid="b613112d-527f-42fb-a793-ebab053074bb">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
+						<jr:groupFooter groupName="Group1">
+							<jr:cell style="Table 1_CH" height="30" rowSpan="1"/>
+						</jr:groupFooter>
+						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="60" height="30" uuid="ac98711f-d09b-46b1-96a9-9f9cff8507bf"/>
+								<text><![CDATA[idade]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table 1_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="60" height="30" uuid="1555be24-1edd-4795-b2dc-0448894471e0"/>
+								<textFieldExpression><![CDATA[$F{idade}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="100" uuid="40cc9c14-c559-439a-92cc-77a75d9d1b50">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
+						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="100" height="30" uuid="33f829f5-ae2a-4a71-bc3b-71b0922e08f6"/>
+								<text><![CDATA[turma]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table 1_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="100" height="30" uuid="9778e0dd-3263-4bfa-8976-f0523f23874d"/>
+								<textFieldExpression><![CDATA[$F{turma}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="120" uuid="fbc115ef-a5fb-49fd-8326-5257758469b4">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
+						<jr:groupFooter groupName="Group1">
+							<jr:cell style="Table 1_CH" height="30" rowSpan="1">
+								<textField>
+									<reportElement x="0" y="0" width="120" height="30" uuid="bad61026-22b7-4cc7-8354-96a73d6f578f"/>
+									<textFieldExpression><![CDATA[MAX($F{idade})]]></textFieldExpression>
+								</textField>
+							</jr:cell>
+						</jr:groupFooter>
+						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="120" height="30" uuid="b40cf792-9e16-4646-9531-5a692717a242"/>
+								<text><![CDATA[Notas]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table 1_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="120" height="30" uuid="213013df-1a89-41ff-9ca0-1f6a67712e99"/>
+								<textFieldExpression><![CDATA[$F{notas}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="94" uuid="d1dfb5e1-80cb-41e0-974f-645b534092d1">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
+						<jr:groupFooter groupName="Group1">
+							<jr:cell style="Table 1_CH" height="30" rowSpan="1"/>
+						</jr:groupFooter>
+						<jr:columnHeader style="Table 1_CH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="94" height="30" uuid="b8ff4944-7e57-497f-a802-d080ad3d8a78"/>
+								<text><![CDATA[Situação]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table 1_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="94" height="30" uuid="b435c74a-d26a-46df-90f0-84a6e677d4a7"/>
+								<textFieldExpression><![CDATA[$F{aprovado}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+				</jr:table>
+			</componentElement>
+		</band>
 	</background>
 	<title>
-		<band height="50" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="515" height="20" uuid="9c32a730-4925-4047-a035-a1aab785ff91">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
+				<reportElement x="0" y="0" width="514" height="30" uuid="457b21a5-9df9-4919-9b61-7abc3ab43e95"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Relatório de alunos]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="0" y="20" width="190" height="30" uuid="073aea8c-7fe6-4b44-9d66-70eb1ca8ca07"/>
-				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="325" y="20" width="190" height="30" uuid="8c1b0a36-4fee-4b52-8997-d2196245b82c"/>
-				<textFieldExpression><![CDATA[$F{telefone}]]></textFieldExpression>
-			</textField>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="24" splitType="Stretch">
-			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="515" height="24" backcolor="#E0E0E0" uuid="efcd927b-075e-4dfe-a7bd-3ed9fbe16acd">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+		<band height="30" splitType="Stretch">
+			<rectangle>
+				<reportElement mode="Opaque" x="0" y="0" width="515" height="30" backcolor="#A1A1A1" uuid="6ce23e5b-f733-4cb5-bbb8-c9f3baf5d00f"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="0" y="0" width="210" height="30" uuid="63b91c51-c4a4-4fa1-b4f1-0945923c45c7">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="18569938-4b2d-4e9b-b176-26d62f6b42a2"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[turma]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Transparent" x="300" y="0" width="215" height="30" uuid="b4c99a8a-6720-4c38-a16b-46b25b3dd8b7">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
-				<staticText>
-					<reportElement x="0" y="0" width="100" height="24" uuid="c6ed264b-6503-4a60-9b3f-6614ca62b058"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Nome:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="207" y="0" width="100" height="24" uuid="eb9e46fd-de3d-4ff5-badc-f2d1b205e702"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Idade:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="415" y="0" width="100" height="24" uuid="d67bbb64-ba32-4993-a3e0-9cd4dd1c913c"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[Turma:]]></text>
-				</staticText>
-			</frame>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[Quantidade de alunos]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
+	<detail>
+		<band height="42">
+			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<componentElement>
+				<reportElement x="0" y="0" width="515" height="30" uuid="01e3d791-07dc-41bc-acf9-1949e50d0232"/>
+				<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
+					<datasetRun subDataset="Dataset1" uuid="a82d1eb8-621b-4184-9fc3-f8a1f234c0ce">
+						<dataSourceExpression><![CDATA[((net.sf.jasperreports.engine.data.JsonDataSource)$P{REPORT_DATA_SOURCE}).subDataSource("Turmas")]]></dataSourceExpression>
+					</datasetRun>
+					<jr:listContents height="30" width="515">
+						<textField>
+							<reportElement x="0" y="0" width="210" height="30" uuid="71fde61f-1ab7-4f7b-98f3-0290d34a3f95"/>
+							<textElement textAlignment="Center"/>
+							<textFieldExpression><![CDATA[$F{turma}]]></textFieldExpression>
+						</textField>
+						<textField>
+							<reportElement x="340" y="0" width="172" height="30" uuid="55c4269c-fdc2-4186-a910-9cf30afee043"/>
+							<textElement textAlignment="Center"/>
+							<textFieldExpression><![CDATA[$F{quantidade}]]></textFieldExpression>
+						</textField>
+					</jr:listContents>
+				</jr:list>
+			</componentElement>
+		</band>
+	</detail>
 	<pageFooter>
-		<band height="44">
+		<band height="50">
 			<staticText>
-				<reportElement x="0" y="0" width="515" height="20" uuid="c4d8ce7d-e878-40cf-9c03-8111ffc727f1">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement x="0" y="0" width="514" height="20" uuid="ff10ee29-42f7-4f58-9453-991e5e1a58e3"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Fim do relatório]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="430" y="20" width="84" height="24" uuid="875a5b28-169d-44f7-88bb-062e01f81deb"/>
+				<reportElement x="315" y="20" width="100" height="30" uuid="52bf485f-abfe-4ebe-9bfb-9f064938c6f4"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="415" y="20" width="100" height="30" uuid="cf93ccd0-c298-4849-a1a8-40656222e74a"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
+	<summary>
+		<band height="104"/>
+	</summary>
 </jasperReport>
