--- a/Desafios/Desafio 1 - simgle page - Node,React/front/src/index.css
+++ b/Desafios/Desafio 1 - simgle page - Node,React/front/src/index.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 main{
-    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,12 +12,101 @@ main{
 }
 
 
-form{
+.modal_form{
     width: 100vw;
     background-color: #2f2f2f;
     height: 100vh;
-    display: none;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    gap: 6px;
+}
+.modal_form form h3{
+    text-transform: uppercase;
+    font-weight: bolder;
+    text-shadow: .3px .3px .3px black;
+    border-bottom: 3px solid #2f2f2f;
+}
+.modal_form form{
+    border-radius: 12px;
+    background-color: whitesmoke;
+    color: #2f2f2f;
+    display:  flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 36px;
+    width: 60%;
+    font-size: 24px;
+}
+
+.modal_form .headerForm{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.modal_form .headerForm button{
+    font-size: 18px;
+    padding: 6px 12px;
+}
+
+.modal_form form input, .modal_form form select{
+    padding: 6px;
+    font-size: 24px;
+    border: none;
+    box-shadow: 3px 3px 3px #2f2f2f;
+    outline: none;
+}
+.modal_form form select option{
+    background-color: #2f2f2f;
+    color: white;
+}
+.modal_form form button{
+    margin-top: 12px;
+    background-color: #2f2f2f;
+    color: white;
+    padding: 12px 0px;
+    font-size: 24px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    text-shadow: .3px .3px .3px black;
+}
+
+.Card{
+    background-color: whitesmoke;
+    box-shadow: 2px 2px 2px #2f2f2f;
+    width: 275px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    justify-content: space-between;
+}
+
+.Card h3{
+    background-color: #2f2f2f;
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 12px 0px;
+}
+
+.Card .CardButtons{
+    margin-bottom: 12px;
+    width: 100%;
+    text-align: center;
+}
+
+.Card .CardButtons button{
+    padding: 6px 12px;
+    margin: 6px;
+    font-size: 18px;
+    background-color: #2f2f2f;
+    border: none;
+    border-radius: 4px;
 }
