--- a/Desafios/Desafio 1 - simgle page - Node,React/front/src/index.css
+++ b/Desafios/Desafio 1 - simgle page - Node,React/front/src/index.css
@@ -14,6 +14,9 @@ main{
 
 .modal_form{
     width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #2f2f2f;
     height: 100vh;
     display: flex;
@@ -109,4 +112,34 @@ main{
     background-color: #2f2f2f;
     border: none;
     border-radius: 4px;
+}
+
+.ProductsContainer{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 24px;
+}
+.ProductsContainer h2{
+    width: 100%;
+    color: #2f2f2f;
+    text-transform: uppercase;
+    font-weight: bolder;
+    text-shadow: .3px .3px .3px black;
+    border-bottom: 3px solid #2f2f2f;
+
+}
+
+footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    z-index: 0;
+    margin-top: 20px;
+    width: 100%;
+    background-color: #2f2f2f;
+    text-align: center;
+    color: whitesmoke;
+    height: 60px;
 }
