--- a/Desafios/Desafio 2/Frontend/src/App.css
+++ b/Desafios/Desafio 2/Frontend/src/App.css
@@ -5,9 +5,21 @@
   height: 32px;
   margin: 16px;
   background: rgba(255, 255, 255, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bolder;
+  color: aliceblue;
+  text-shadow: .2px .2px .2px aliceblue;
 }
 
 .Layout-Header{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+  color: black;
+  text-shadow: .2px .2px .2px black;
   padding: 0;
 }
 .Layout-Content{
