--- a/Desafios/Desafio 2/Frontend/src/App.css
+++ b/Desafios/Desafio 2/Frontend/src/App.css
@@ -14,21 +14,7 @@
   text-shadow: .2px .2px .2px aliceblue;
 }
 
-.Layout-Header{
-  text-align: center;
-  font-size: 20px;
-  font-weight: bolder;
-  color: black;
-  text-shadow: .2px .2px .2px black;
-  padding: 0;
-}
-.Layout-Content{
-  font-size: 32px;
-}
-.Layout-Content-Breadcrumb{
-  margin: 16px 0px;
-}
-
 .Layout-Footer{
+  font-size: 1.2rem;
   text-align: center;
 }
