--- a/Desafios/Desafio 2/Frontend/src/styles/Alert.css
+++ b/Desafios/Desafio 2/Frontend/src/styles/Alert.css
@@ -3,9 +3,10 @@
     display: flex;
     align-items: center;
     width: 60%;
+    top: 24px;
     left: 50%;
     transform: translate(-40%,0%);
-    opacity: .7;
+    opacity: .6;
 }
 
 .time-bar{
