--- a/Tools/Mapa/front/src/index.css
+++ b/Tools/Mapa/front/src/index.css
@@ -11,3 +11,40 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     z-index: 1000;
 }
+
+.spin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.fullscreen:-webkit-full-screen {
+    height: 100%;
+    margin: 0;
+}
+
+.fullscreen:-ms-fullscreen {
+    height: 100%;
+}
+
+.fullscreen:fullscreen {
+    height: 100%;
+}
+.map .ol-rotate {
+    top: 3em;
+}
+
+.map {
+    width: 80%;
+    height: 100%;
+    float: left;
+}
+
+#settings{
+    border-left: none;
+}   
+
+#settings:hover {
+    background-color: 'red';
+}
